--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-background{
+body {
 	background-image: url("https://pbs.twimg.com/media/FGHImYvXsAIjwk3.png");
 	background-repeat: repeat;
 	background-color: green;
